# cleanjk

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  CreateVisualStudio2015Projects_x64.bat  CreateVisualStudio2015Projects_x86.bat  CreateVisualStudio2017Projects_x64.bat  CreateVisualStudio2017Projects_x86.bat  CreateVisualStudio2019Projects_x64.bat  CreateVisualStudio2019Projects_x86.bat
codemp/: CMakeLists.txt
codemp/Ratl/: bits_vs.h  bits_vs.hpp  ratl_common.h  ratl_common.hpp  vector_vs.h  vector_vs.hpp
codemp/Ravl/: CVec.h  CVec.hpp
codemp/botlib/: be_ea.cpp  be_ea.h  be_ea.hpp  be_interface.cpp  be_interface.h  be_interface.hpp  botlib.h  botlib.hpp  l_crc.cpp  l_crc.h  l_crc.hpp  l_libvar.cpp  l_libvar.h  l_log.cpp  l_log.h  l_log.hpp  l_memory.cpp  l_memory.h  l_memory.hpp  l_precomp.cpp  l_precomp.h  l_precomp.hpp  l_script.cpp  l_script.h  l_struct.cpp  l_struct.h  l_struct.hpp  l_utils.h
codemp/cgame/: CMakeLists.txt  animtable.h  animtable.hpp  cg_consolecmds.c  cg_consolecmds.cpp  cg_cvar.c  cg_cvar.cpp  cg_draw.c  cg_draw.cpp  cg_drawtools.c  cg_drawtools.cpp  cg_effects.c  cg_effects.cpp  cg_engine.cpp  cg_engine.hpp  cg_ents.c  cg_ents.cpp  cg_event.c  cg_event.cpp  cg_info.c  cg_info.cpp  cg_light.c  cg_light.cpp  cg_local.h  cg_local.hpp  cg_localents.c  cg_localents.cpp  cg_main.c  cg_main.cpp  cg_marks.c  cg_marks.cpp  cg_media.c  cg_media.cpp  cg_media.h  cg_newDraw.c  cg_newDraw.cpp  cg_players.c  cg_players.cpp  cg_playerstate.c  cg_playerstate.cpp  (+26 more)
codemp/client/: FXExport.cpp  FXExport.h  FXExport.hpp  FxPrimitives.cpp  FxPrimitives.h  FxPrimitives.hpp  FxScheduler.cpp  FxScheduler.h  FxScheduler.hpp  FxSystem.cpp  FxSystem.h  FxSystem.hpp  FxTemplate.cpp  FxUtil.cpp  FxUtil.h  FxUtil.hpp  cl_avi.cpp  cl_cgame.cpp  cl_cgameapi.cpp  cl_cgameapi.h  cl_cgameapi.hpp  cl_cin.cpp  cl_console.cpp  cl_fonts.cpp  cl_fonts.hpp  cl_input.cpp  cl_keycodes.h  cl_keys.cpp  cl_keys.h  cl_keys.hpp  cl_lan.cpp  cl_lan.h  cl_local.h  cl_local.hpp  cl_main.cpp  cl_net_chan.cpp  cl_parse.cpp  cl_public.h  cl_public.hpp  cl_scrn.cpp  (+22 more)
codemp/game/: CMakeLists.txt  ai_botlib.cpp  ai_botlib.h  ai_botlib.hpp  ai_chars.h  ai_main.c  ai_main.cpp  ai_main.h  ai_main.hpp  ai_util.c  ai_util.cpp  ai_wpnav.c  ai_wpnav.cpp  anims.h  b_local.h  b_local.hpp  b_public.h  bg_g2_utils.c  bg_g2_utils.cpp  bg_local.h  bg_local.hpp  bg_misc.c  bg_misc.cpp  bg_panimate.c  bg_panimate.cpp  bg_pmove.c  bg_pmove.cpp  bg_public.h  bg_public.hpp  bg_saber.c  bg_saber.cpp  bg_saberLoad.c  bg_saberLoad.cpp  bg_saga.c  bg_saga.cpp  bg_saga.h  bg_slidemove.c  bg_slidemove.cpp  bg_weapons.c  bg_weapons.cpp  (+86 more)
codemp/ghoul2/: G2.h  G2.hpp  G2_gore.cpp  G2_gore.h  G2_gore.hpp  g2_local.h  g2_local.hpp  ghoul2_shared.h  ghoul2_shared.hpp
codemp/icarus/: BlockStream.cpp  GameInterface.cpp  GameInterface.h  GameInterface.hpp  Instance.cpp  Interface.cpp  Interpreter.cpp  Memory.cpp  Q3_Interface.cpp  Q3_Interface.h  Q3_Interface.hpp  Q3_Registers.cpp  Q3_Registers.h  Q3_Registers.hpp  Sequence.cpp  Sequencer.cpp  TaskManager.cpp  Tokenizer.cpp  blockstream.h  blockstream.hpp  icarus.h  icarus.hpp  instance.h  instance.hpp  interface.h  interface.hpp  interpreter.h  interpreter.hpp  sequence.h  sequence.hpp  sequencer.h  sequencer.hpp  taskmanager.h  taskmanager.hpp  tokenizer.h  tokenizer.hpp
codemp/mp3code/: cdct.c  config.h  csbt.c  csbtb.c  cup.c  cupini.c  cupl1.c  cupl3.c  cwin.c  cwinm.c  hwin.c  l3.h  l3dq.c  l3init.c  mdct.c  mhead.c  mhead.h  mp3struct.h  msis.c  port.h  small_header.h  towave.c  uph.c  upsf.c
codemp/null/: null_client.cpp  null_input.cpp  null_renderer.cpp  null_snddma.cpp
codemp/qcommon/: GenericParser2.cpp  GenericParser2.h  GenericParser2.hpp  MiniHeap.h  MiniHeap.hpp  RoffSystem.cpp  RoffSystem.h  RoffSystem.hpp  cm_load.cpp  cm_local.h  cm_local.hpp  cm_patch.cpp  cm_patch.h  cm_polylib.cpp  cm_polylib.h  cm_polylib.hpp  cm_public.h  cm_public.hpp  cm_test.cpp  cm_trace.cpp  cmd.cpp  com_cvar.h  com_cvar.hpp  com_cvars.cpp  com_cvars.h  com_cvars.hpp  com_inputField.cpp  com_inputField.hpp  common.cpp  cvar.cpp  disablewarnings.h  files.cpp  game_version.h  game_version.hpp  huffman.cpp  huffman.hpp  matcomp.cpp  matcomp.h  matcomp.hpp  md4.cpp  (+33 more)
codemp/rd-common/: mdx_format.h  mdx_format.hpp  tr_common.h  tr_common.hpp  tr_font.cpp  tr_font.h  tr_font.hpp  tr_image_jpg.cpp  tr_image_load.cpp  tr_image_png.cpp  tr_image_tga.cpp  tr_noise.cpp  tr_public.h  tr_public.hpp  tr_types.h  tr_types.hpp
codemp/rd-dedicated/: G2_API.cpp  G2_bolts.cpp  G2_bones.cpp  G2_misc.cpp  G2_surfaces.cpp  qgl.h  qgl.hpp  tr_WorldEffects.h  tr_WorldEffects.hpp  tr_backend.cpp  tr_cvars.cpp  tr_cvars.h  tr_font.h  tr_font.hpp  tr_ghoul2.cpp  tr_init.cpp  tr_local.h  tr_local.hpp  tr_main.cpp  tr_mesh.cpp  tr_model.cpp  tr_quicksprite.h  tr_quicksprite.hpp  tr_shader.cpp  tr_skin.cpp
codemp/rd-vanilla/: CMakeLists.txt  G2_API.cpp  G2_bolts.cpp  G2_bones.cpp  G2_misc.cpp  G2_surfaces.cpp  glext.h  glext.hpp  qgl.h  qgl.hpp  tr_WorldEffects.cpp  tr_WorldEffects.h  tr_arb.cpp  tr_backend.cpp  tr_bsp.cpp  tr_cmds.cpp  tr_curve.cpp  tr_cvars.cpp  tr_cvars.h  tr_decals.cpp  tr_ghoul2.cpp  tr_image.cpp  tr_init.cpp  tr_light.cpp  tr_local.h  tr_local.hpp  tr_main.cpp  tr_marks.cpp  tr_mesh.cpp  tr_model.cpp  tr_quicksprite.cpp  tr_quicksprite.h  tr_scene.cpp  tr_shade.cpp  tr_shade_calc.cpp  tr_shader.cpp  tr_shadows.cpp  tr_skin.cpp  tr_sky.cpp  tr_subs.cpp  (+4 more)
codemp/server/: server.h  server.hpp  sv_bot.cpp  sv_ccmds.cpp  sv_challenge.cpp  sv_client.cpp  sv_game.cpp  sv_gameapi.cpp  sv_gameapi.h  sv_init.cpp  sv_main.cpp  sv_net_chan.cpp  sv_snapshot.cpp  sv_world.cpp
codemp/ui/: CMakeLists.txt  keycodes.h  menudef.h  ui_atoms.c  ui_atoms.cpp  ui_cvar.c  ui_cvar.cpp  ui_engine.cpp  ui_engine.hpp  ui_fonts.cpp  ui_fonts.h  ui_fonts.hpp  ui_force.c  ui_force.cpp  ui_force.h  ui_force.hpp  ui_gameinfo.c  ui_gameinfo.cpp  ui_local.h  ui_local.hpp  ui_main.c  ui_main.cpp  ui_public.h  ui_public.hpp  ui_saber.c  ui_saber.cpp  ui_shared.c  ui_shared.cpp  ui_shared.h  ui_shared.hpp  (+2 more)
(+72 files in other folders)
